# ml-soccer

./: .gitignore  AGENTS.md  BITACORA_ENTORNO.md  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-commit.ps1  pre-push  pre-push.ps1
.github/workflows/: project-governance.yml
config/: ingestion.toml  project_governance.toml
data/bronze/matchhistory/manifests/: eng_premier_league_2122.json  eng_premier_league_2223.json  eng_premier_league_2324.json
data/silver/: matches_silver.parquet
docs/guides/: README.md  como-continuar-etl.md  reglas-escalado-seguro.md
docs/notebooks/: 01_explorer_matchhistory_cells.md  02_silver_matchhistory_cells.md  README.md
docs/research/: README.md  soccer-deep-research-report.md
notebooks/: 01_explorer_matchhistory.ipynb  02_silver_matchhistory.ipynb
notebooks/.ipynb_checkpoints/: 01_explorer_matchhistory-checkpoint.ipynb
scripts/: _governance.ps1  bootstrap.ps1  export-notebook-cells.ps1  ingest-matchhistory.ps1  refresh-matchhistory.ps1  scaffold-notebook.ps1  sync-project.ps1  validate-project.ps1  watch-project.ps1
src/football_ml/: __init__.py  command_ledger.py  config.py  export_notebook_cells.py  governance.py  governed_docs.py  logging_utils.py  paths.py  scaffold_notebook.py  sync_project.py  validate.py  watch_project.py
src/football_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/football_ml/ingest/: __init__.py  matchhistory.py
tests/: test_config_and_paths.py  test_governance_and_sync.py  test_matchhistory_ingest.py  test_validate_rules.py
(+1 files in other folders)
