[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-ml"
version = "0.1.0"
description = "Automation and data workflows for football-ml."
readme = "BITACORA_ENTORNO.md"
requires-python = ">=3.13"
dependencies = [
  "soccerdata==1.8.8",
  "pandas==2.3.3",
  "pyarrow==23.0.1",
  "jupyter==1.1.1",
  "notebook==7.5.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
